--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -25,7 +25,7 @@
 		  editor = K.create('textarea[name="post"]', {
 		  allowImageUpload : true,
 		  urlType:'domain',
-		  uploadJson:'http://127.0.0.1:3000/upload',
+		  uploadJson:'../../../editUpload',
 		  width:'100%',
 		  height:'500px',
 		  resizeType:'0',
