--- a/views/global/nav.ejs
+++ b/views/global/nav.ejs
@@ -14,7 +14,7 @@
 			        	<span class="icon-bar"></span>
 			        	<span class="icon-bar"></span>
 	      			</button>
-					<a class="navbar-brand" href="/">nodeJs博客</a>
+					<a class="navbar-brand" href="/">Node多人博客系统</a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="navbar">
