--- a/views/post.ejs
+++ b/views/post.ejs
@@ -18,22 +18,22 @@
 		<script charset="utf-8" src="/KindEditor/kindeditor-min.js"></script>
 		<script charset="utf-8" src="/KindEditor/lang/zh_CN.js"></script>
 		<script>
-		var editor;
-		KindEditor.ready(function(K) {
-		  editor = K.create('textarea[name="post"]', {
-		  allowImageUpload : true,
-		  urlType:'domain',
-		  uploadJson:'http://127.0.0.1:3000/upload',
-		  width:'100%',
-		  height:'500px',
-		  resizeType:'0',
-		  items : ['undo' , 'redo' , 'cut' , 'copy' , 'paste' , 'preview', '|',
-		    'fontname', 'fontsize', 'indent', 'outdent' , '|', 'forecolor', 'hilitecolor', 'bold', 'italic',
-		    'underline', 'strikethrough' , 'removeformat', 'hr' , 'lineheight' , '|', 'justifyleft', 'justifycenter', 'justifyright',
-		    'justifyfull' , 'insertorderedlist', 'insertunorderedlist', '|', 'emoticons', 'image', 'link' , 'baidumap',
-		  	'table' , 'source' , 'code' ,'fullscreen']
-		  });
-		});
+			var editor;
+			KindEditor.ready(function(K) {
+			editor = K.create('textarea[name="post"]', {
+			allowImageUpload : true,
+			urlType:'domain',
+			uploadJson:'../upload',
+			width:'100%',
+			height:'500px',
+			resizeType:'0',
+			items : ['undo' , 'redo' , 'cut' , 'copy' , 'paste' , 'preview', '|',
+				'fontname', 'fontsize', 'indent', 'outdent' , '|', 'forecolor', 'hilitecolor', 'bold', 'italic',
+				'underline', 'strikethrough' , 'removeformat', 'hr' , 'lineheight' , '|', 'justifyleft', 'justifycenter', 'justifyright',
+				'justifyfull' , 'insertorderedlist', 'insertunorderedlist', '|', 'emoticons', 'image', 'link' , 'baidumap',
+				'table' , 'source' , 'code' ,'fullscreen']
+			});
+			});
 		</script>
 		
 		<div class="form-group">
